subindo alterações do propierties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Setup Local
-spring.datasource.url= jdbc:postgresql://localhost:5432/dbJBSpoc
-spring.datasource.username= postgres
-spring.datasource.password= 1234
+spring.datasource.url=jdbc:postgresql://pg-17577c5d-renatogerminare-f4bc.f.aivencloud.com:23882/defaultdb?sslmode=require
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_oTzVOL5Ilg8-3rIbfsj
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
